style.css
body {
  margin: 0;
  padding: 0;
  font-family:Arial, Helvetica, sans-serif;
}

main {
  display: flex;
}

.tools {
  flex: 1;
  display: flex;
  flex-flow: column;
  height: 100vh;
  justify-content: space-evenly;
  padding: 0 1rem;
  border: 2px solid turquoise;
  box-sizing: border-box;
}

.board-con header {
  flex: 1;
  display: flex;
  flex-flow: column;
  border: 2px solid goldenrod;
}

.lang-con {
  align-self: end;
  display: flex;
  gap: 10px;
  padding-right: 20px;
  padding-bottom: 10px;
}

.lang-con .label-con label {
  font-size: 32px;
}

.lang-con .label-con span {
  position: absolute;
  visibility: hidden;
}

.lang-con select {
  cursor: pointer;
}

.board-section {
  display: flex;
  flex-flow: column;
  flex: 5;
  overflow: hidden;
}

.board-con {
  position: relative;
  display: flex;
  flex-flow: column;
}

.board-con h1 {
  align-self: center;
}

.board-con button:not(#popup) {
  width: 1rem;
  align-self: center;
  max-height: 1rem;
}

.props {
  display: flex;
  gap: 20px;
  padding: 10px;
}

.props > div {
  display: flex;
  gap: 20px;
  align-items: center;
}

.props .switch {
  position: relative;
  min-height: 26px;
  padding: 0;
  width: 48px !important;
  border-radius: 13px;
  border: 1px solid lightslategray;
  box-sizing: border-box;
  cursor: pointer;
}

.props .switch.active {
  background-color: #b1f8b1;
  border-color: forestgreen;
}

.props .switch.active::before {
  background-color: #418303;
  left: 24px;
}

.props .switch::before {
  position: absolute;
  left: 2px;
  top: 2px;
  content: '';
  height: 20px;
  width: 20px;
  border-radius: 50%;
  background-color: gray;
  transition: all 200ms ease-in-out;
}

#board {
  flex: 4;
  position: relative;
  overflow: auto;
  min-height: 500px;
}

.node {
  position: absolute;
  width: 1.4rem;
  height: 1.4rem;
  border-radius: 50%;
  cursor: pointer;
  box-sizing: border-box;
  transition: transform 300ms ease-in-out,
              box-shadow 150ms;
  background-color: gold;
  font-size: 0.8rem;
  display: flex;
  align-items: center;
  justify-content: center;
  overflow: visible;
  z-index: 1;
  /* box-shadow: 0 0 2px rgba(167, 167, 20, 0.3); */
}

.edge {
  position: absolute;
  display: flex;
  justify-content: center;
  overflow-x: visible;
  border: 1px black solid;
  height: 1px;
  padding: 0;
  margin: 0;
  cursor: pointer;
  box-sizing: border-box;
}


.arrow {
  position: absolute;
  z-index: 2;
}

#test-download {
  display: flex;
}

.weight {
  overflow: hidden;
  resize: none;
  border: none;
  display: flex;
  transform: translateY(-110%);
  background: transparent;
  text-align-last: center;
}

.weight.warning:focus {
  outline-color: red;
}

.node.active {
  box-shadow: 0 0 10px rgba(10, 142, 219, 0.4);
}

.node sub {
  position: relative;
  top: 0.18rem;
  left: 0.02rem;
  font-size: 0.4rem;
}

.node .name {
  position: relative;
  overflow: hidden;
  resize: none;
  border: none;
  display: flex;
  /*white-space: nowrap;*/
  background: transparent;
  width: 50px !important;
  height: 0.8rem;
  text-align-last: center;
  z-index: 100;
}

.node .name.up {
  bottom: 1.4rem;
}

.node .name.warning:focus {
  outline-color: red;
}

.collapse {
  transform: scale(0);
}

#saved-sect {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 10px;
}

/* elements */

#popup {
  position: fixed;
  max-width: 80vw;
  padding: 10px 4px;
  border-radius: 8px;
  border: none;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
  background-color: beige;
  left: 50%;
  bottom: 30px;
  transform: translate(-50%, calc(100% + 30px)) scale(0);
  opacity: 0;
  transition: opacity 500ms ease-in-out,
              transform 500ms ease-in-out;
  z-index: 100;
}

#popup.alert {
  opacity: 1;
  transform: translateX(-50%) scale(1);
}

#popup p {
  margin: 0;
  max-width: 300px;
}

